# standard-py-project

./: .gitignore  README.md  pyproject.toml
scripts/: setup.sh
