[tool.poetry]
name = "standard-py-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "standard_py_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"


[tool.poetry.group.format.dependencies]
black = "^23.1.0"
isort = "^5.12.0"


[tool.poetry.group.linter.dependencies]
ruff = "^0.0.254"


[tool.poetry.group.type.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
